# csa_lab4

./: .gitignore  README.md  assembler.py  golden_test.py  isa.py  machine.py  pyproject.toml  runner.py  translator.py
.github/workflows/: ci.yml
golden/: bigint.yml  cat.yml  factorial.yml  hello.yml  hello_user_name.yml  prob2.yml  sort.yml
machine/: enums.py  machine.py  microprogram.py
resources/: csa_lab4.drawio
src/: assembler.py  enums.py  isa.py  machine.py  microprogram.py  runner.py  translator.py
src/machine/: enums.py  machine.py  microprogram.py
