[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "csa-lab4"
requires-python = ">=3.10"
dependencies = ["pytest", "ruff", "mypy"]

[tool.ruff]
select = ["ALL"]              # turn on every rule
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true