[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "csa-lab4"
version = "0.1"
requires-python = ">=3.10"
dependencies = ["pytest", "pytest-golden", "ruff", "mypy"]

[pytest]
enable_assertion_pass_hook = true

[tool.ruff]
line-length = 130
ignore = [
    "T201", # prints
    "ERA001", # commented code
    "FIX002", # TODO
    "TD", # TODO
    "D", # docstrings
    "ANN204", # type annotation for special method
    "TC003", # type checking block
    "S101", # assertions
    "S105", # token isn't password
    "INP001", # init file
    "C901", # complex
    "PLR0912", # many branches
    "ANN001",
    "ARG002",
    "PTH123" # path open
    ]
select = ["ALL"]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]